--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@react-three/fiber": "^9.3.0",
     "@types/three": "^0.180.0",
     "clsx": "^2.1.1",
+    "flag-icons": "^7.5.0",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-confetti": "^6.4.0",
     "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
     "three": "^0.180.0",
     "three-globe": "^2.44.0"
   },
